[project]
name = "zink"
version = "0.4.1"
description = "Zink lets you safeguard privacy by detecting sensitive information and replacing it with secure, customizable placeholders."
authors = [
    { name = "Deepan Wadhwa"}
    ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.0.0",
    "gliner==0.2.3",
    "pyahocorasick>=2.1.0",
]

[dependency-groups]
dev = [
    "ipython>=9.0.0",
    "pytest>=8.3.4",
    "ruff>=0.11.2",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
]
[project.optional-dependencies]
dev = [
    "ipython>=9.0.0",
    "pytest>=8.3.4",
    "ruff>=0.11.2",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.setuptools]
packages = ["zink"]
include-package-data = true

[project.urls]
Homepage = "https://github.com/deepanwadhwa/zink"
Repository = "https://github.com/deepanwadhwa/zink"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

